<resources>
    <string name="app_name">WATTCHAT</string>
    <string name="action_settings">Settings</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp"><u>Sign Up</u></string>
    <string name="nameSurname">Name Surname</string>
    <string name="update">Update</string>
    <string name="sendAmessage"><u>Send a Message</u></string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="empty">Lütfen tüm alanların girildiğinden emin olunuz.</string>
    <string name="passwordConfirmProblem">Şifreniz eşleşmiyor.</string>
    <string name="reRegister">Kullanıcı zaten kayıtlı.</string>
    <string name="UserRegisrationMessage">Kaydınız başarılı.</string>
    <string name="usernameorPasswordInCorrect">Üzgünüz.</string>
    <string name="DeleteMessagesQuestion">Mesajlarınızı silmek istiyor musunuz?</string>
    <string name="DeleteMessagesTag">Mesajlar silindi.</string>
    <string name="NotDeleted">Silinmedi.</string>
    <string name="checkPassword">Lütfen şifrenizi kontrol ediniz.</string>
    <string name="updateInformation">Bilgileriniz güncelleniyor.</string>
    <string name="tryAgain">Bir sorun oluştu. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="emptyListView">Mesaj Listeniz Boş.</string>
</resources>